--- a/styles.css
+++ b/styles.css
@@ -38,17 +38,55 @@ p {
     border-top: 2px;
     border-style: solid;
     border-color: #eb5e28;
-    width: fit-content;
-    position: absolute;
     display: block;
-    transition-property: top;
-    transition-duration: 1s;
-    max-width: 300px;
-    top: 20px;
 }
 
 .annotation > p {
     margin-top: 10px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.2em;
+}
+
+@media screen and (min-width: 820px) {
+    .annotation {
+        width: fit-content;
+        transition-property: top;
+        transition-duration: 1s;
+        max-width: 300px;
+        top: 20px;
+        position: absolute;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .page-main {
+        width: 100%;
+    }
+
+    .content-block {
+        margin-right: 0px;
+    }
+
+    .annotation {
+        bottom: 0px;
+        width: 100%;
+        left: 0px;
+        background-color: white;
+        box-shadow: 0 1px 5px #666;
+        border-top: 0px;
+        height: fit-content;
+        max-height: 0px;
+        position: fixed;
+        transition-property: "max-height";
+        transition-duration: "1s";
+    }
+
+    .page-sidebar {
+        display: block;
+    }
+
+    .annotation > p {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
