--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ p {
         width: 100%;
         left: 0px;
         background-color: white;
-        box-shadow: 0 1px 5px #666;
+        box-shadow: 0 2px 6px 2px #666;
         border-top: 0px;
         height: fit-content;
         max-height: 0px;
@@ -88,5 +88,10 @@ p {
     .annotation > p {
         margin-left: 10px;
         margin-right: 10px;
+        border: 0px;
+        border-top: 2px;
+        border-style: solid;
+        padding-top: 10px;
+        margin-top: 20px;
     }
 }
